fix(merlin-www-section-gallery): Wired Spacing in the byline has dropped out [ch2079]
Wired

--- a/packages/merlin-www-section-gallery/sass/wired/wired.scss
+++ b/packages/merlin-www-section-gallery/sass/wired/wired.scss
@@ -125,6 +125,7 @@ li.c-gallery__image-item {
 .c-gallery__byline-prefix {
     @include font("EXCHANGE WEB", 11px);
     font-style: italic;
+    margin-right: 3px;
 }
 
 .c-gallery__byline-name {
